--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@openserv-labs/sdk": "^1.1.0",
     "dotenv": "^16.4.5",
+    "puppeteer": "^24.2.1",
+    "tesseract.js": "^6.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
