--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es2015",
     "module": "commonjs",
     "lib": [
-      "ES2020"
+      "es2015",
+      "dom"
     ],
     "outDir": "./dist",
     "rootDir": "./src",
