--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ dist/
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.*
 
 # Logs
 *.log
@@ -154,3 +154,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Training data
+*.traineddata
